# HydraPP

./: .gitignore  CMakeLists.txt  PostProcessMain.sln  README.md
.github/workflows/: checkmarx-analysis.yml  codacy-analysis.yml  codeql-analysis.yml
PostProcessDLL/: Functions.cpp  Functions.h  Main.cpp  PostProcess.cpp  PostProcess.h  PostProcessDLLTrofimm.vcxproj
hydra_pp/: CMakeLists.txt  HydraPostProcessAPI.cpp  HydraPostProcessAPI.h  HydraPostProcessSpecial.h  NonLocalMeans.cpp  hydra_pp.vcxproj  hydra_pp.vcxproj.filters
tests/: CMakeLists.txt  main.cpp  tests.h  tests.vcxproj  tests.vcxproj.filters  tests_pp.cpp
